--- a/config/samples/frontend-forge_v1alpha1_frontendintegration.yaml
+++ b/config/samples/frontend-forge_v1alpha1_frontendintegration.yaml
@@ -3,18 +3,20 @@ kind: FrontendIntegration
 metadata:
   name: demo-fi
   namespace: default
+  annotations:
+    kubesphere.io/description: Demo iframe integration
 spec:
-  bundle_name: demo-fi
-  source:
-    name: demo-plugin
-    version: 1.0.0
-    entry: src/index.ts
-    dependencies:
-      react: "^18.3.0"
-      "react-dom": "^18.3.0"
-    files:
-      - path: src/index.ts
-        content: |
-          export default function Demo() {
-            return 'hello frontend-forge';
-          }
+  displayName: Demo FI
+  enabled: true
+  builder:
+    engineVersion: v1
+  integration:
+    type: iframe
+    iframe:
+      src: http://example.test/frontend
+  routing:
+    path: demo
+  menu:
+    placements:
+      - global
+      - workspace
