--- a/crates/runner/Cargo.toml
+++ b/crates/runner/Cargo.toml
@@ -15,3 +15,6 @@ snafu.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+
+[dev-dependencies]
+serde_yaml.workspace = true
