--- a/config/crd/bases/frontend-forge.io_jsbundles.yaml
+++ b/config/crd/bases/frontend-forge.io_jsbundles.yaml
@@ -1,76 +1,244 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: jsbundles.frontend-forge.io
+  annotations:
+    controller-gen.kubebuilder.io/version: (unknown)
+    kubectl.kubernetes.io/last-applied-configuration: |
+      {"apiVersion":"apiextensions.k8s.io/v1","kind":"CustomResourceDefinition","metadata":{"annotations":{"controller-gen.kubebuilder.io/version":"(unknown)"},"name":"jsbundles.extensions.kubesphere.io"},"spec":{"group":"extensions.kubesphere.io","names":{"kind":"JSBundle","listKind":"JSBundleList","plural":"jsbundles","singular":"jsbundle"},"scope":"Cluster","versions":[{"name":"v1alpha1","schema":{"openAPIV3Schema":{"description":"JSBundle declares a js bundle that needs to be injected into ks-console,\nthe endpoint can be provided by a service or a static file.","properties":{"apiVersion":{"description":"APIVersion defines the versioned schema of this representation of an object.\nServers should convert recognized schemas to the latest internal value, and\nmay reject unrecognized values.\nMore info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources","type":"string"},"kind":{"description":"Kind is a string value representing the REST resource this object represents.\nServers may infer this from the endpoint the client submits requests to.\nCannot be updated.\nIn CamelCase.\nMore info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds","type":"string"},"metadata":{"type":"object"},"spec":{"properties":{"raw":{"format":"byte","type":"string"},"rawFrom":{"properties":{"caBundle":{"format":"byte","type":"string"},"configMapKeyRef":{"description":"Selects a key of a ConfigMap.","properties":{"key":{"description":"The key to select.","type":"string"},"name":{"default":"","description":"Name of the referent.\nThis field is effectively required, but due to backwards compatibility is\nallowed to be empty. Instances of this type with an empty value here are\nalmost certainly wrong.\nMore info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names","type":"string"},"namespace":{"type":"string"},"optional":{"description":"Specify whether the ConfigMap or its key must be defined","type":"boolean"}},"required":["key","namespace"],"type":"object","x-kubernetes-map-type":"atomic"},"insecureSkipVerify":{"type":"boolean"},"secretKeyRef":{"description":"Selects a key of a Secret.","properties":{"key":{"description":"The key of the secret to select from.  Must be a valid secret key.","type":"string"},"name":{"default":"","description":"Name of the referent.\nThis field is effectively required, but due to backwards compatibility is\nallowed to be empty. Instances of this type with an empty value here are\nalmost certainly wrong.\nMore info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names","type":"string"},"namespace":{"type":"string"},"optional":{"description":"Specify whether the Secret or its key must be defined","type":"boolean"}},"required":["key","namespace"],"type":"object","x-kubernetes-map-type":"atomic"},"service":{"description":"service is a reference to the service for this endpoint. Either\nservice or url must be specified.\nthe scheme is default to HTTPS.","properties":{"name":{"description":"name is the name of the service.\nRequired","type":"string"},"namespace":{"description":"namespace is the namespace of the service.\nRequired","type":"string"},"path":{"description":"path is an optional URL path at which the upstream will be contacted.","type":"string"},"port":{"description":"port is an optional service port at which the upstream will be contacted.\n`port` should be a valid port number (1-65535, inclusive).\nDefaults to 443 for backward compatibility.","format":"int32","type":"integer"}},"required":["name","namespace"],"type":"object"},"url":{"description":"`url` gives the location of the upstream, in standard URL form\n(`scheme://host:port/path`). Exactly one of `url` or `service`\nmust be specified.","type":"string"}},"type":"object"}},"type":"object"},"status":{"properties":{"conditions":{"items":{"description":"Condition contains details for one aspect of the current state of this API Resource.","properties":{"lastTransitionTime":{"description":"lastTransitionTime is the last time the condition transitioned from one status to another.\nThis should be when the underlying condition changed.  If that is not known, then using the time when the API field changed is acceptable.","format":"date-time","type":"string"},"message":{"description":"message is a human readable message indicating details about the transition.\nThis may be an empty string.","maxLength":32768,"type":"string"},"observedGeneration":{"description":"observedGeneration represents the .metadata.generation that the condition was set based upon.\nFor instance, if .metadata.generation is currently 12, but the .status.conditions[x].observedGeneration is 9, the condition is out of date\nwith respect to the current state of the instance.","format":"int64","minimum":0,"type":"integer"},"reason":{"description":"reason contains a programmatic identifier indicating the reason for the condition's last transition.\nProducers of specific condition types may define expected values and meanings for this field,\nand whether the values are considered a guaranteed API.\nThe value should be a CamelCase string.\nThis field may not be empty.","maxLength":1024,"minLength":1,"pattern":"^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$","type":"string"},"status":{"description":"status of the condition, one of True, False, Unknown.","enum":["True","False","Unknown"],"type":"string"},"type":{"description":"type of condition in CamelCase or in foo.example.com/CamelCase.","maxLength":316,"pattern":"^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$","type":"string"}},"required":["lastTransitionTime","message","reason","status","type"],"type":"object"},"type":"array"},"link":{"description":"Link is the path for downloading JS file, default to \"/dist/{jsBundleName}/index.js\".","type":"string"},"state":{"type":"string"}},"type":"object"}},"type":"object"}},"served":true,"storage":true}]}}
+  creationTimestamp: "2026-01-19T07:48:40Z"
+  generation: 1
+  name: jsbundles.extensions.kubesphere.io
+  resourceVersion: "2535"
+  uid: 16a40ed5-92b0-4fa6-a0c4-8d0f2c388a33
 spec:
-  group: frontend-forge.io
+  conversion:
+    strategy: None
+  group: extensions.kubesphere.io
   names:
-    categories: []
     kind: JSBundle
+    listKind: JSBundleList
     plural: jsbundles
-    shortNames: []
     singular: jsbundle
-  scope: Namespaced
+  scope: Cluster
   versions:
-  - additionalPrinterColumns: []
-    name: v1alpha1
-    schema:
-      openAPIV3Schema:
-        description: Auto-generated derived type for JsBundleSpec via `CustomResource`
-        properties:
-          spec:
-            properties:
-              files:
-                default: []
-                items:
+    - name: v1alpha1
+      schema:
+        openAPIV3Schema:
+          description: |-
+            JSBundle declares a js bundle that needs to be injected into ks-console,
+            the endpoint can be provided by a service or a static file.
+          properties:
+            apiVersion:
+              description: |-
+                APIVersion defines the versioned schema of this representation of an object.
+                Servers should convert recognized schemas to the latest internal value, and
+                may reject unrecognized values.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
+              type: string
+            kind:
+              description: |-
+                Kind is a string value representing the REST resource this object represents.
+                Servers may infer this from the endpoint the client submits requests to.
+                Cannot be updated.
+                In CamelCase.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
+              type: string
+            metadata:
+              type: object
+            spec:
+              properties:
+                raw:
+                  format: byte
+                  type: string
+                rawFrom:
                   properties:
-                    content:
+                    caBundle:
+                      format: byte
                       type: string
-                    content_type:
-                      nullable: true
+                    configMapKeyRef:
+                      description: Selects a key of a ConfigMap.
+                      properties:
+                        key:
+                          description: The key to select.
+                          type: string
+                        name:
+                          default: ""
+                          description: |-
+                            Name of the referent.
+                            This field is effectively required, but due to backwards compatibility is
+                            allowed to be empty. Instances of this type with an empty value here are
+                            almost certainly wrong.
+                            More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                          type: string
+                        namespace:
+                          type: string
+                        optional:
+                          description:
+                            Specify whether the ConfigMap or its key must
+                            be defined
+                          type: boolean
+                      required:
+                        - key
+                        - namespace
+                      type: object
+                      x-kubernetes-map-type: atomic
+                    insecureSkipVerify:
+                      type: boolean
+                    secretKeyRef:
+                      description: Selects a key of a Secret.
+                      properties:
+                        key:
+                          description:
+                            The key of the secret to select from.  Must be
+                            a valid secret key.
+                          type: string
+                        name:
+                          default: ""
+                          description: |-
+                            Name of the referent.
+                            This field is effectively required, but due to backwards compatibility is
+                            allowed to be empty. Instances of this type with an empty value here are
+                            almost certainly wrong.
+                            More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                          type: string
+                        namespace:
+                          type: string
+                        optional:
+                          description:
+                            Specify whether the Secret or its key must be
+                            defined
+                          type: boolean
+                      required:
+                        - key
+                        - namespace
+                      type: object
+                      x-kubernetes-map-type: atomic
+                    service:
+                      description: |-
+                        service is a reference to the service for this endpoint. Either
+                        service or url must be specified.
+                        the scheme is default to HTTPS.
+                      properties:
+                        name:
+                          description: |-
+                            name is the name of the service.
+                            Required
+                          type: string
+                        namespace:
+                          description: |-
+                            namespace is the namespace of the service.
+                            Required
+                          type: string
+                        path:
+                          description:
+                            path is an optional URL path at which the upstream
+                            will be contacted.
+                          type: string
+                        port:
+                          description: |-
+                            port is an optional service port at which the upstream will be contacted.
+                            `port` should be a valid port number (1-65535, inclusive).
+                            Defaults to 443 for backward compatibility.
+                          format: int32
+                          type: integer
+                      required:
+                        - name
+                        - namespace
+                      type: object
+                    url:
+                      description: |-
+                        `url` gives the location of the upstream, in standard URL form
+                        (`scheme://host:port/path`). Exactly one of `url` or `service`
+                        must be specified.
                       type: string
-                    encoding:
-                      enum:
-                      - utf8
-                      - base64
-                      type: string
-                    path:
-                      type: string
-                    sha256:
-                      nullable: true
-                      type: string
-                    size:
-                      format: uint64
-                      minimum: 0.0
-                      nullable: true
-                      type: integer
-                  required:
-                  - content
-                  - encoding
-                  - path
                   type: object
-                type: array
-              manifest_hash:
-                type: string
-            required:
-            - manifest_hash
-            type: object
-          status:
-            nullable: true
-            properties:
-              message:
-                nullable: true
-                type: string
-              ready:
-                nullable: true
-                type: boolean
-            type: object
-        required:
-        - spec
-        title: JSBundle
-        type: object
-    served: true
-    storage: true
-    subresources:
-      status: {}
-
+              type: object
+            status:
+              properties:
+                conditions:
+                  items:
+                    description:
+                      Condition contains details for one aspect of the current
+                      state of this API Resource.
+                    properties:
+                      lastTransitionTime:
+                        description: |-
+                          lastTransitionTime is the last time the condition transitioned from one status to another.
+                          This should be when the underlying condition changed.  If that is not known, then using the time when the API field changed is acceptable.
+                        format: date-time
+                        type: string
+                      message:
+                        description: |-
+                          message is a human readable message indicating details about the transition.
+                          This may be an empty string.
+                        maxLength: 32768
+                        type: string
+                      observedGeneration:
+                        description: |-
+                          observedGeneration represents the .metadata.generation that the condition was set based upon.
+                          For instance, if .metadata.generation is currently 12, but the .status.conditions[x].observedGeneration is 9, the condition is out of date
+                          with respect to the current state of the instance.
+                        format: int64
+                        minimum: 0
+                        type: integer
+                      reason:
+                        description: |-
+                          reason contains a programmatic identifier indicating the reason for the condition's last transition.
+                          Producers of specific condition types may define expected values and meanings for this field,
+                          and whether the values are considered a guaranteed API.
+                          The value should be a CamelCase string.
+                          This field may not be empty.
+                        maxLength: 1024
+                        minLength: 1
+                        pattern: ^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$
+                        type: string
+                      status:
+                        description: status of the condition, one of True, False, Unknown.
+                        enum:
+                          - "True"
+                          - "False"
+                          - Unknown
+                        type: string
+                      type:
+                        description: type of condition in CamelCase or in foo.example.com/CamelCase.
+                        maxLength: 316
+                        pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
+                        type: string
+                    required:
+                      - lastTransitionTime
+                      - message
+                      - reason
+                      - status
+                      - type
+                    type: object
+                  type: array
+                link:
+                  description:
+                    Link is the path for downloading JS file, default to
+                    "/dist/{jsBundleName}/index.js".
+                  type: string
+                state:
+                  type: string
+              type: object
+          type: object
+      served: true
+      storage: true
+status:
+  acceptedNames:
+    kind: JSBundle
+    listKind: JSBundleList
+    plural: jsbundles
+    singular: jsbundle
+  conditions:
+    - lastTransitionTime: "2026-01-19T07:48:40Z"
+      message: no conflicts found
+      reason: NoConflicts
+      status: "True"
+      type: NamesAccepted
+    - lastTransitionTime: "2026-01-19T07:48:40Z"
+      message: the initial names have been accepted
+      reason: InitialNamesAccepted
+      status: "True"
+      type: Established
+  storedVersions:
+    - v1alpha1
