--- a/config/manager/controller-deployment.yaml
+++ b/config/manager/controller-deployment.yaml
@@ -38,5 +38,7 @@ spec:
               value: "30"
             - name: RECONCILE_REQUEUE_SECONDS
               value: "5"
+            - name: JOB_ACTIVE_DEADLINE_SECONDS
+              value: "90"
             - name: JOB_TTL_SECONDS_AFTER_FINISHED
               value: "600"
