--- a/config/crd/bases/frontend-forge.io_frontendintegrations.yaml
+++ b/config/crd/bases/frontend-forge.io_frontendintegrations.yaml
@@ -1,6 +1,8 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
+  labels:
+    kubesphere.io/resource-served: "true"
   name: frontendintegrations.frontend-forge.io
 spec:
   group: frontend-forge.io
@@ -299,4 +301,3 @@ spec:
     storage: true
     subresources:
       status: {}
-
