--- a/config/rbac/runner-rbac.yaml
+++ b/config/rbac/runner-rbac.yaml
@@ -58,6 +58,9 @@ rules:
   - apiGroups: ["extensions.kubesphere.io"]
     resources: ["jsbundles"]
     verbs: ["get", "create", "patch", "update"]
+  - apiGroups: ["extensions.kubesphere.io"]
+    resources: ["jsbundles/status"]
+    verbs: ["get", "patch", "update"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
