feat: exclude spec.enabled from build hash and sync enabled state

--- a/config/rbac/controller-rbac.yaml
+++ b/config/rbac/controller-rbac.yaml
@@ -11,13 +11,16 @@ metadata:
 rules:
   - apiGroups: ["frontend-forge.io"]
     resources: ["frontendintegrations"]
-    verbs: ["get", "list", "watch"]
+    verbs: ["get", "list", "watch", "patch", "update"]
   - apiGroups: ["frontend-forge.io"]
     resources: ["frontendintegrations/status"]
     verbs: ["get", "patch", "update"]
   - apiGroups: ["extensions.kubesphere.io"]
     resources: ["jsbundles"]
-    verbs: ["get", "list", "watch"]
+    verbs: ["get", "list", "watch", "patch", "update"]
+  - apiGroups: ["extensions.kubesphere.io"]
+    resources: ["jsbundles/status"]
+    verbs: ["get", "patch", "update"]
   - apiGroups: ["batch"]
     resources: ["jobs"]
     verbs: ["create", "delete", "get", "list", "watch"]
