--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -2,13 +2,10 @@ name: Build And Push Docker Images
 
 on:
   pull_request_target:
-    branches:
-      - main
-    types:
-      - closed
+    branches: [main]
+    types: [closed]
   release:
-    types:
-      - published
+    types: [published]
 
 permissions:
   contents: read
@@ -17,16 +14,36 @@ env:
   DOCKERHUB_NAMESPACE: ${{ vars.DOCKERHUB_NAMESPACE || 'spike2044' }}
 
 jobs:
-  build-and-push:
+  build-by-arch:
     if: ${{ github.event_name == 'release' || github.event.pull_request.merged == true }}
-    runs-on: ubuntu-latest
+    name: Build ${{ matrix.image_name }} (${{ matrix.platform }})
+    runs-on: ${{ matrix.runner }}
     strategy:
       fail-fast: false
       matrix:
         include:
-          - image_name: frontend-forge-controller
+          # amd64（原生）
+          - runner: ubuntu-latest
+            platform: linux/amd64
+            arch: amd64
+            image_name: frontend-forge-controller
             dockerfile: crates/controller/Dockerfile
-          - image_name: frontend-forge-runner
+          - runner: ubuntu-latest
+            platform: linux/amd64
+            arch: amd64
+            image_name: frontend-forge-runner
+            dockerfile: crates/runner/Dockerfile
+
+          # arm64（原生 ARM runner，无需 QEMU）
+          - runner: ubuntu-24.04-arm
+            platform: linux/arm64
+            arch: arm64
+            image_name: frontend-forge-controller
+            dockerfile: crates/controller/Dockerfile
+          - runner: ubuntu-24.04-arm
+            platform: linux/arm64
+            arch: arm64
+            image_name: frontend-forge-runner
             dockerfile: crates/runner/Dockerfile
 
     steps:
@@ -34,9 +51,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.merge_commit_sha || github.sha }}
-
-      - name: Set Up QEMU
-        uses: docker/setup-qemu-action@v3
 
       - name: Set Up Buildx
         uses: docker/setup-buildx-action@v3
@@ -47,7 +61,8 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Compute Tags
+      # 这里仍沿用你原来的 tags 逻辑，但只生成“最终 tag”，不在本 job 里直接打 tag
+      - name: Compute Final Tags
         id: tags
         env:
           IMAGE_NAME: ${{ matrix.image_name }}
@@ -55,31 +70,108 @@ jobs:
         shell: bash
         run: |
           image="docker.io/${DOCKERHUB_NAMESPACE}/${IMAGE_NAME}"
-
           if [[ "${GITHUB_EVENT_NAME}" == "release" ]]; then
-            {
-              echo "tags<<EOF"
-              echo "${image}:${RELEASE_TAG}"
-              echo "EOF"
-            } >> "$GITHUB_OUTPUT"
+            echo "tags<<EOF" >> "$GITHUB_OUTPUT"
+            echo "${image}:${RELEASE_TAG}" >> "$GITHUB_OUTPUT"
+            echo "EOF" >> "$GITHUB_OUTPUT"
             exit 0
           fi
 
           date_tag="$(TZ=Asia/Shanghai date +%Y%m%d)"
-          {
-            echo "tags<<EOF"
-            echo "${image}:${date_tag}"
-            echo "${image}:latest"
-            echo "EOF"
-          } >> "$GITHUB_OUTPUT"
+          echo "tags<<EOF" >> "$GITHUB_OUTPUT"
+          echo "${image}:${date_tag}" >> "$GITHUB_OUTPUT"
+          echo "${image}:latest" >> "$GITHUB_OUTPUT"
+          echo "EOF" >> "$GITHUB_OUTPUT"
 
-      - name: Build And Push
+      # 单平台 build + push（按 digest 推送，不直接 push tag）
+      - name: Build and push by digest
+        id: build
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ${{ matrix.dockerfile }}
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ matrix.platform }}
           push: true
-          tags: ${{ steps.tags.outputs.tags }}
-          cache-from: type=gha,scope=${{ matrix.image_name }}
-          cache-to: type=gha,mode=max,scope=${{ matrix.image_name }}
+          # 关键：push-by-digest + name-canonical，让 action 输出 image digest 供 merge 用
+          outputs: type=image,name=docker.io/${{ env.DOCKERHUB_NAMESPACE }}/${{ matrix.image_name }},push-by-digest=true,name-canonical=true,push=true
+          cache-from: type=gha,scope=${{ matrix.image_name }}-${{ matrix.arch }}
+          cache-to: type=gha,mode=min,scope=${{ matrix.image_name }}-${{ matrix.arch }}
+
+      # 把 digest 写到 artifact，merge job 统一合成 multi-arch
+      - name: Export digest
+        shell: bash
+        run: |
+          mkdir -p digests
+          # steps.build.outputs.digest 形如 "sha256:...."
+          echo "${{ steps.build.outputs.digest }}" > "digests/${{ matrix.image_name }}-${{ matrix.arch }}.txt"
+
+      - name: Upload digest artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: digests-${{ matrix.image_name }}-${{ matrix.arch }}
+          path: digests/*.txt
+
+  merge-manifests:
+    if: ${{ github.event_name == 'release' || github.event.pull_request.merged == true }}
+    name: Merge multi-arch manifests
+    runs-on: ubuntu-latest
+    needs: [build-by-arch]
+
+    steps:
+      - name: Download all digest artifacts
+        uses: actions/download-artifact@v4
+        with:
+          pattern: digests-*
+          path: digests
+          merge-multiple: true
+
+      - name: Set Up Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log In To Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Compute Final Tags (same logic)
+        id: tags
+        env:
+          RELEASE_TAG: ${{ github.event.release.tag_name }}
+        shell: bash
+        run: |
+          if [[ "${GITHUB_EVENT_NAME}" == "release" ]]; then
+            echo "release_tag=${RELEASE_TAG}" >> "$GITHUB_OUTPUT"
+          else
+            date_tag="$(TZ=Asia/Shanghai date +%Y%m%d)"
+            echo "date_tag=${date_tag}" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Create and push manifest lists
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          for image_name in frontend-forge-controller frontend-forge-runner; do
+            repo="docker.io/${DOCKERHUB_NAMESPACE}/${image_name}"
+
+            amd_digest="$(cat "digests/${image_name}-amd64.txt")"
+            arm_digest="$(cat "digests/${image_name}-arm64.txt")"
+
+            # 生成要打的 tags（与你原逻辑一致）
+            tags=()
+            if [[ "${GITHUB_EVENT_NAME}" == "release" ]]; then
+              tags+=("${repo}:${{ steps.tags.outputs.release_tag }}")
+            else
+              tags+=("${repo}:${{ steps.tags.outputs.date_tag }}")
+              tags+=("${repo}:latest")
+            fi
+
+            # 合并两个平台 digest 成一个 multi-arch manifest，并把 tags 推上去
+            for t in "${tags[@]}"; do
+              docker buildx imagetools create \
+                -t "${t}" \
+                "${repo}@${amd_digest}" \
+                "${repo}@${arm_digest}"
+            done
+          done
